--- a/TankGame/TankGame/TankGame.vcxproj
+++ b/TankGame/TankGame/TankGame.vcxproj
@@ -83,6 +83,7 @@
     <ClInclude Include="Base\Global.h" />
     <ClInclude Include="Base\Object.h" />
     <ClInclude Include="Game\GameManager.h" />
+    <ClInclude Include="Game\Player.h" />
     <ClInclude Include="Game\Terrain.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -92,6 +93,7 @@
     <ClCompile Include="Base\Global.cpp" />
     <ClCompile Include="Base\Object.cpp" />
     <ClCompile Include="Game\GameManager.cpp" />
+    <ClCompile Include="Game\Player.cpp" />
     <ClCompile Include="Game\Terrain.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
