--- a/TankGame/TankGame/TankGame.vcxproj.filters
+++ b/TankGame/TankGame/TankGame.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClInclude Include="Game\Terrain.h">
       <Filter>Game</Filter>
     </ClInclude>
+    <ClInclude Include="Game\Player.h">
+      <Filter>Game</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp" />
@@ -35,6 +38,9 @@
       <Filter>Game</Filter>
     </ClCompile>
     <ClCompile Include="Game\GameManager.cpp">
+      <Filter>Game</Filter>
+    </ClCompile>
+    <ClCompile Include="Game\Player.cpp">
       <Filter>Game</Filter>
     </ClCompile>
   </ItemGroup>
